# emoatlas

./: .readthedocs.yaml  LICENSE  README.md  another_text_[baseline].txt  baselines.py  distributions.py  draw_formamentis_bundling.py  draw_formamentis_force.py  draw_plutchik.py  dutch_stem.json  dutch_stem_idiomatic_tokens.json  dyads.py  emo_scores.py  emolib.py  emolib_demo.ipynb  emotions.py  emotionslib.py  formamentis_edgelist.py  german_stem.json  italian_stem.json  language_dependencies.py  pyproject.toml  requirements.txt  resources.py  romanian_stem_idiomatic_tokens.json  russian_stem_idiomatic_tokens.json  sample_article.txt  setup.cfg  setup.py  test Alf.ipynb  test.ipynb  textloader.py
Demos&Guides/: Analyzing_TFMNs.ipynb  Starting_guide.ipynb
antonyms/: catalan.py  chinese.py  danish.py  dutch.py  english.py  french.py  german.py  greek.py  italian.py  japanese.py  lithuanian.py  macedonian.py  norwegian.py  polish.py  portuguese.py  romanian.py  russian.py  spanish.py
demos/: Analyzing_TFMN.ipynb  Analyzing_TFMNs.ipynb  Starting_guide.ipynb  emolib_demo.ipynb  simple_demo.ipynb
docs/: requirements.txt
emoatlas/: __init__.py  baselines.py  distributions.py  draw_formamentis_bundling.py  draw_formamentis_force.py  draw_plutchik.py  dyads.py  emo_scores.py  emolib.py  emotions.py  formamentis_edgelist.py  language_dependencies.py  resources.py  textloader.py
langs/: Anger_Extended.txt  Anticipation_Extended.txt  Disgust_Extended.txt  Fear_Extended.txt  Joy_Extended.txt  Make_Ext_English.ipynb  NRC-Emotion-Lexicon-v0.92-English-ext.csv  Sadness_Extended.txt  Surprise_Extended.txt  Trust_Extended.txt  catalan.py  catalan_idiomatic_tokens.json  chinese.py  danish.json  danish.py  danish_idiomatic_tokens.json  dutch.py  emojis.json  english.json  english.py  french.json  french.py  french_idiomatic_tokens.json  german.py  german_idiomatic_tokens.json  greek.py  italian.py  (+26 more)
(+116 files in other folders)
