
[project]
name = "emoatlas"
author = 'Salvatore Vilella'
description = "A Python library for the detection and visualization of emotions in texts"
readme = "README.md"
requires-python = ">=3.8, <3.12"
keywords = ["one", "two"]
license = {text = "BSD-3-Clause"}
classifiers = []
dependencies = []

[metadata]
version = attr: emoatlas.__version__
long_description = file: README.md
long_description_content_type = text/markdown



[options]

zip_safe = True
packages = emoatlas
include_package_data = True
install_requires =
    matplotlib
    spacy==3.7.2
    networkx
    nltk
    shapely==1.8.5.post1
    pandas
    community
    python-louvain
    numpy
    setuptools
    scipy
    chardet
    deep_translator
    # matplotlib==3.6.0
    # spacy==3.7.2
    # networkx>=2.6.3
    # nltk>=3.7
    # shapely>=1.8.4
    # pandas>=1.3.5
    # community>=1.0.0b1
    # python-louvain>=0.16
    # numpy==1.23.4
    # scipy


[options.package_data]
emoatlas = langs/*, baseline_tables/*, antonyms/*

[options.packages.find]
exclude =
    examples*
    demos*
    sample_texts*

