
[project]
name = "emoatlas"
author = 'Salvatore Vilella'
description = "A Python library for the detection and visualization of emotions in texts"
readme = "README.md"
requires-python = ">=3.8, <3.12"
keywords = ["one", "two"]
license = {text = "BSD-3-Clause"}
classifiers = []
dependencies = []

[metadata]
version = attr: emoatlas.__version__
long_description = file: README.md
long_description_content_type = text/markdown



[options]

zip_safe = True
packages = emoatlas
include_package_data = True
install_requires =install_requires = file: requirements.txt


[options.package_data]
emoatlas = langs/*, baseline_tables/*, antonyms/*

[options.packages.find]
exclude =
    examples*
    demos*
    sample_texts*

